@@ -366,41 +366,7 @@ G4cout << "after " <<  ( n4p.e() - n4p.m() ) / eV<< G4endl;
     theResult.Get()->SetEnergyChange(theNeutron.GetKineticEnergy());
     theResult.Get()->SetMomentumChange(theNeutron.GetMomentum().unit());
     G4DynamicParticle* theRecoil = new G4DynamicParticle;
-    if(targetMass<4.5)
-    {
-      if(targetMass<1)
-      {
-        // proton
-        theRecoil->SetDefinition(G4Proton::Proton());
-      }
-      else if(targetMass<2 )
-      {
-        // deuteron
-        theRecoil->SetDefinition(G4Deuteron::Deuteron());
-      }
-      else if(targetMass<2.999 )
-      {
-        // 3He 
-        theRecoil->SetDefinition(G4He3::He3());
-      }
-      else if(targetMass<3 )
-      {
-        // Triton
-        theRecoil->SetDefinition(G4Triton::Triton());
-      }
-      else
-      {
-        // alpha
-        theRecoil->SetDefinition(G4Alpha::Alpha());
-      }
-    }
-    else
-    {
-      //theRecoil->SetDefinition(G4ParticleTable::GetParticleTable()
-      //                         ->FindIon(static_cast<G4int>(theBaseZ), static_cast<G4int>(theBaseA), 0, static_cast<G4int>(theBaseZ)));
-      theRecoil->SetDefinition(G4IonTable::GetIonTable()
-                               ->GetIon(static_cast<G4int>(theBaseZ), static_cast<G4int>(theBaseA), 0 ));
-    }
+    theRecoil->SetDefinition( G4IonTable::GetIonTable()->GetIon(static_cast<G4int>(theBaseZ), static_cast<G4int>(theBaseA), 0 ) );
     theRecoil->SetMomentum(theTarget.GetMomentum());
     theResult.Get()->AddSecondary(theRecoil);
 //    G4cout << "G4NeutronHPElasticFS::ApplyYourself 10+"<<G4endl;
