@@ -14,6 +14,16 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+11 November 2014 Tatsumi Koi   (hadr-hpn-V10-00-33)
+Fix for Bugzilla #1686
+	src/G4NeutronHPElasticFS.cc
+
+
+11 November 2014 Tatsumi Koi   (hadr-hpn-V10-00-32)
+Fix warning message in gcc4.1 compiler 
+	include/G4NeutronHPEnAngCorrelation.hh
+
+
 8 November 2014 Tatsumi Koi   (hadr-hpn-V10-00-31)
 Fix problem on single threading mode
 	include/G4NeutronHPEnAngCorrelation.hh
